fix the wrapping text on Why programming

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@
  .float img{
    float: left;
    margin-top: 60px;
-   width: 40%;
+   width: 30%;
 }
 
 .pad{
@@ -80,7 +80,7 @@
 }
 
 .head{
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 dl{
